<?xml version="1.0"?>
<package format="2">
  <name>ngs_denso_rc8_api</name>
  <version>0.1.0</version>
  <description>ROS Package for communication with Denso RC8 Robotic Arm Controller developed by Next Generation Systems Group</description>

  <author email="jtcass01@louisville.edu">Jacob Taylor Cassady</author>
  <maintainer email="jtcass01@louisville.edu">Jacob Taylor Cassady</maintainer>
  <url type="git repo">https://jtcass01@bitbucket.org/nextgensystems/denso_rc8_api.git</url>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
